app-config/client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-curl
  namespace: my-apps
spec:
  selector:
    matchLabels:
      app: app-1
  replicas: 2
  template:
    metadata:
      labels:
        app: app-1
    spec:
      containers:
      - name: my-curl
        image: nginx
        ports:
        - containerPort: 80
