app-config/nginx-service1.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service-a
  namespace: my-apps
  labels:
    app: app-1
spec:
  selector:
    app: app-1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-service-a
  namespace: my-apps
  labels:
    app: app-1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app-1
  template:
    metadata:
      labels:
        app: app-1
    spec:
      serviceAccountName: nginx-service-a
      containers:
      - name: nginx
        image: 707083327938.dkr.ecr.us-west-2.amazonaws.com/eks-apps-ecr:v1.0.1
        ports:
        - containerPort: 80
