app-config/nginx-service2.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service-b
  namespace: my-apps
  labels:
    app: app-2
spec:
  selector:
    app: app-2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-service-b
  namespace: my-apps
  labels:
    app: app-2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app-2
  template:
    metadata:
      labels:
        app: app-2
    spec:
      serviceAccountName: nginx-service-b
      containers:
      - name: nginx
        image: 707083327938.dkr.ecr.us-west-2.amazonaws.com/eks-apps-ecr:v2.0.0
        ports:
        - containerPort: 80
